# fff-frontend

./: .gitignore  Dockerfile  README.md  angular.json  docker-compose.yml  karma.conf.js  nginx.conf  package-lock.json  package.json  pyproject.toml  start-locally.sh  tailwind.config.js  tsconfig.json  webpack.config.js
components/: Footer.js  Indicators.js  Layout.js  Navbar.js  SearchForm.js  Snack.js  SnackList.js  functions.js
constants/: urls.js
e2e/src/: app.e2e-spec.ts
f3/: f3.py
f3/static/css/: style.css
f3/static/js/: main.js
f3/templates/: about_us.html  base.html  footer.html  index.html  landingpage.html  navbar.html  navbar_withsearch.html  searchbar.html  searchresult.html  snack.html  snack_detail.html
f3/templates/about/: erik.html  francisco.html  jens.html  katharina.html  kathy.html  lisa.html  martine.html  selina.html  valerie.html
f3/templates/error/: 404.html
pages/: about.js  index.js
pages/about/: erik.js  francisco.js  jens.js  katharina.js  kathy.js  lisa.js  martine.js  selina.js  valerie.js
pages/category/: [category].js
pages/snack/: [snack].js
src/: index.html  mixins.scss  styles.scss  variables.scss
src/app/: analytics.service.ts  app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  data.service.ts
src/app/about-fake-news/: about-fake-news.component.html  about-fake-news.component.spec.ts  about-fake-news.component.ts
src/app/about-us/: about-us.component.html  about-us.component.ts
src/app/article-card/: article-card.component.html  (+2 more)
tests/: test_f3.py
(+77 files in other folders)
