[tool.poetry]
name = "f3"
version = "0.1.0"
description = ""
authors = ["Erik Langenhan <erik.langenhan@web.de>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
requests = "^2.24.0"
datetime = "^4.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
